--- a/templates/base.html
+++ b/templates/base.html
@@ -109,11 +109,11 @@
                 <a href="#"> Privacy </a></b>
              </div>
     </div>
-        <div class="row">
-            <div class="col-md-12 text-center">
-                <b>Copyright © 2019 - All rights reserved. Developed by - <span style="text-decoration: none; color:black;"><a href="https://about.me/gyrationtechs"> David Ozokoye</a></b></span>
-            </div>
+    <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+    <div class="container text-center">
+      <small>Copyright &copy; 2020 - EEE Unijos. Developed by <a style="text-decoration: none; color: #aeaeaa;" href="https://gyrationtechs.com.ng">David Ozokoye</a></small>
     </div>
+  </footer>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
