Added footer and fixed mobile nav

--- a/templates/login.html
+++ b/templates/login.html
@@ -46,7 +46,7 @@
                     </small>
                 </div>
                 <div class=" text-center form-group">
-                      {{ form.submit(class="btn btn-outline-success") }}
+                      {{ form.submit(class="btn btn-info") }}
                 </div>             
               </form>
               <div class="text-center small text-muted">
