--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,15 @@
 ﻿* {
     margin: 0px;
     padding: 0;
-    font-family: sans-serif;
+    font-family: tahoma, sans-serif;
 }
+
+
+.link-style {
+    text-decoration: none; 
+    color: #aeaeaa;
+}
+
 
 .site-color {
     background-color: #092a50 !important; 
