--- a/templates/base.html
+++ b/templates/base.html
@@ -16,57 +16,82 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/all.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/dataTables.bootstrap4.min.css') }}">
+      <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../static/css/dataTables.bootstrap4.min.css">
+  <script src="../static/js/jquery.min.js"></script>
+  <script src="../static/js/popper.min.js"></script>
+  <script src="../static/js/bootstrap.min.js"></script>
+  <script src="../static/js/jquery.dataTables.min.js"></script>
+  <script src="../static/js/dataTables.bootstrap4.min.js"></script>
 
 </head>
 <body>
-    <div class="container-fluid text-light text-white">
-        <nav style="background-color: #092a50;" class="navbar navbar-expand-lg navbar-light text-light bg-color bg-site">
-            <a class="navbar-brand active small" href=" {{ url_for('home') }} ">EEE PORTAL</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul style="text-decoration: none; text-decoration-color: #ffffff; color: aliceblue;" class="navbar-nav mr-auto">
-                <li class="nav-item active small">
-                    <a class="nav-link" href="{{url_for('home')}}">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active small">
-                    <a class="nav-link" href="{{url_for('about')}}">About</a>
-                </li>
-                <li class="nav-item active small">
-                        <a class="nav-link" href="{{url_for('contact')}}">Contact</a>
-                </li>
-                <li class="nav-item active small">
-                    <a class="nav-link" href="{{url_for('forum')}}" tabindex="-1" aria-disabled="true">Forum</a>
-                </li>
-                {% if current_user.is_authenticated %}
-                    <li class="nav-item pull-right active small">
+    {% if current_user.is_admin == True %}
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+          <a class="navbar-brand" href="/home">Admin Navigation</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse pull-right navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="/admin">Admin Panel</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/admin_profile">Admin Dashboard</a>
+              </li> 
+              <li class="nav-item">
+                <a class="nav-link" href="/add_admin">Add Admin</a>
+              </li>  
+              <li class="nav-item">
+                <a class="nav-link" href="/admin/student">All Students</a>
+              </li>  
+               <li class="nav-item">
+                <a class="nav-link" href="/logout">Logout</a>
+              </li>  
+            </ul>
+          </div>  
+        </nav>
+        {% else %}
+        <nav style="background-color: #092a50 !important;" class="navbar navbar-expand-sm bg-dark navbar-dark">
+          <a class="navbar-brand" href="/home">EEE Registration Portal</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse pull-right navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="/about">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/contact">Contact</a>
+              </li>  
+              <li class="nav-item">
+                <a class="nav-link" href="/forum">Forum</a>
+              </li>  
+              {% if current_user.is_authenticated %}
+                    <li class="nav-item ">
                         <a class="nav-link" href="{{url_for('dashboard')}}">Dashboard</a>
                     </li>
-                    <li class="nav-item pull-right active small">
+                    <li class="nav-item">
                         <a class="nav-link" href="{{url_for('new_post')}}">Create Post</a>
                     </li>
-                    <li class="nav-item pull-right active small">
+                    <li class="nav-item">
                         <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
                     </li>
 
                 {% else %}
-                    <li class="nav-item pull-right active small">
+                    <li class="nav-item">
                         <a class="nav-link" href="{{url_for('auth')}}">Register</a>
                     </li>
-                    <li class="nav-item pull-right active small">
+                    <li class="nav-item">
                         <a class="nav-link" href="{{url_for('login')}}">Login</a>
                     </li>
                 {% endif %}
-                </ul>
-                <form class="form-inline small pull-center my-2 my-sm-0">
-                <input class="form-control small mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn small btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
-            </div>
-            </nav>
-    </div>
+            </ul>
+          </div>  
+        </nav>
+        {% endif %}
     <div class="container-fluid mt-3">
         {% block header %}{% endblock %}
     </div>
@@ -99,19 +124,64 @@
             </div>
         </div>
     </div>
-        
-    <!-- Sticky Footer -->
-    <div class="col-md-12 text-center">
-            <div class="btn btn-default" style="font-size: 15px;">
-             <b><a href="#"> Home </a> |
-                <a href="#"> About </a> |
-                <a href="#"> Contact </a> |
-                <a href="#"> Privacy </a></b>
-             </div>
+     <div class="container-fluid bg-dark">   
+        <div class="small row text-white mt-4" style="padding-top: 30px;">
+            <div class="col-md-3">
+                <h4>IMPORTANT LINKS</h4>
+                <ul class="list-group">
+                    <li class="list-group-item list-group-item-dark"><a style="text-decoration: none; color: #fff;" href="/home">Home</a></li>
+                    <li class="list-group-item list-group-item-dark"><a style="text-decoration: none; color: #fff;" href="/login">Login</a></li>
+                    <li class="list-group-item list-group-item-dark"><a style="text-decoration: none; color: #fff;" href="/register">Register</a></li>
+                    <li class="list-group-item list-group-item-dark"><a style="text-decoration: none; color: #fff;" href="/forum">Forum</a></li>
+                </ul>
+            </div>
+            <div class="col-md-3">
+                <h4>ABOUT US</h4>
+                <p class="text-justify">
+                Electrical and Electronics Engineering (EEE), deals with the engineering problems, 
+                opportunities, and needs of electrical, electronics, computer, telecommunication 
+                systems and related industries. Learn more about us through the link below</p>
+                <button style="width: 100%;" class="btn btn-info" ><a style="text-decoration: none; color: #fff;" href="/about">About Us</a></button>
+
+            </div>
+            <div class="col-md-3">
+                <h4>SOCIAL MEDIA</h4>
+                <ul class="list-group">
+                    <li class="list-group-item list-group-item-dark"><a style="text-decoration: none; color: #fff;" href="https://facebook.com">Facebook</a></li>
+                    <li class="list-group-item list-group-item-dark"><a style="text-decoration: none; color: #fff;" href="https://linkedin.com">LinkedIn</a></li>
+                    <li class="list-group-item list-group-item-dark"><a style="text-decoration: none; color: #fff;" href="https://twitter.com">Twitter</a></li>
+                    <li class="list-group-item list-group-item-dark"><a style="text-decoration: none; color: #fff;" href="https://instagram.com">Instagram</a></li>
+                </ul>
+            </div>
+            <div class="col-md-3">
+                <h4>NEWSLETTER</h4>
+                <p class="text-justify">
+                Enter your Email Address in the form below to subscribe to our newsletter and get latest updates straight to your Email</p>
+                <form>
+                    <div class="form-group">
+                        <div class="form-control">
+                            <input type="text" placeholder="Enter Email" class="form-control-md">
+
+                        </div>
+                    </div>
+                </form>
+                <button style="width: 100%;" class="btn btn-info" ><a style="text-decoration: none; color: #fff;" href="#">Subscribe </a></button>
+                
+            </div>
+        </div>
     </div>
     <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
     <div class="container text-center">
-      <small>Copyright &copy; 2020 - EEE Unijos. Developed by <a style="text-decoration: none; color: #aeaeaa;" href="https://gyrationtechs.com.ng">David Ozokoye</a></small>
+
+      <small>Copyright &copy; 2020 - EEE Unijos. Developed by <a style="text-decoration: none; color: #aeaeaa;" href="https://gyrationtechs.com.ng">David Ozokoye</a></small> 
+      <small class="pull-right">
+          <div class="link-style">
+                <a style="text-decoration: none; color: #aeaeaa;" href="/home"> Home </a> |
+                <a style="text-decoration: none; color: #aeaeaa;" href="/about"> About </a> |
+                <a style="text-decoration: none; color: #aeaeaa;" href="/contact"> Contact </a> |
+                <a style="text-decoration: none; color: #aeaeaa;" href="/privacy"> Privacy </a>
+             </div>
+      </small>
     </div>
   </footer>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
