Delete post logic added

--- a/templates/base.html
+++ b/templates/base.html
@@ -125,7 +125,7 @@
         </div>
     </div>
      <div class="container-fluid bg-dark">   
-        <div class="small row text-white mt-4" style="padding-top: 30px;">
+        <div class="small row text-white mt-4" style="padding: 30px;">
             <div class="col-md-3">
                 <h4>IMPORTANT LINKS</h4>
                 <ul class="list-group">
@@ -134,6 +134,7 @@
                     <li class="list-group-item list-group-item-dark"><a style="text-decoration: none; color: #fff;" href="/register">Register</a></li>
                     <li class="list-group-item list-group-item-dark"><a style="text-decoration: none; color: #fff;" href="/forum">Forum</a></li>
                 </ul>
+                <br>
             </div>
             <div class="col-md-3">
                 <h4>ABOUT US</h4>
@@ -142,16 +143,18 @@
                 opportunities, and needs of electrical, electronics, computer, telecommunication 
                 systems and related industries. Learn more about us through the link below</p>
                 <button style="width: 100%;" class="btn btn-info" ><a style="text-decoration: none; color: #fff;" href="/about">About Us</a></button>
-
+                <br>
+                <hr>
             </div>
             <div class="col-md-3">
                 <h4>SOCIAL MEDIA</h4>
-                <ul class="list-group">
-                    <li class="list-group-item list-group-item-dark"><a style="text-decoration: none; color: #fff;" href="https://facebook.com">Facebook</a></li>
-                    <li class="list-group-item list-group-item-dark"><a style="text-decoration: none; color: #fff;" href="https://linkedin.com">LinkedIn</a></li>
-                    <li class="list-group-item list-group-item-dark"><a style="text-decoration: none; color: #fff;" href="https://twitter.com">Twitter</a></li>
-                    <li class="list-group-item list-group-item-dark"><a style="text-decoration: none; color: #fff;" href="https://instagram.com">Instagram</a></li>
+                <ul class="list-group footer-s">
+                    <li ><a style="text-decoration: none; color: #fff;" href="https://facebook.com">Facebook</a></li>
+                    <li><a style="text-decoration: none; color: #fff;" href="https://linkedin.com">LinkedIn</a></li>
+                    <li><a style="text-decoration: none; color: #fff;" href="https://twitter.com">Twitter</a></li>
+                    <li><a style="text-decoration: none; color: #fff;" href="https://instagram.com">Instagram</a></li>
                 </ul>
+                <br>
             </div>
             <div class="col-md-3">
                 <h4>NEWSLETTER</h4>
@@ -166,7 +169,7 @@
                     </div>
                 </form>
                 <button style="width: 100%;" class="btn btn-info" ><a style="text-decoration: none; color: #fff;" href="#">Subscribe </a></button>
-                
+                <br>
             </div>
         </div>
     </div>
