--- a/templates/forum_update.html
+++ b/templates/forum_update.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-     <h1>Forum - New Post</h1>
+     <h1>Forum - Update Post</h1>
      <form method="POST" action="">
         {{ form.hidden_tag() }}
       <div class="form-group">
