--- a/templates/login.html
+++ b/templates/login.html
@@ -39,13 +39,13 @@
                     {% endif %}  
                     </div>
                 </div>
-                <div class="form-check">
+                <div style="margin: 0px !important; padding: 0px !important;" class="form-check">
                     <small>
                         {{ form.remember.label(class="form-check-label") }}
                       {{ form.remember(class="form-check-input") }}
                     </small>
                 </div>
-                <div class=" text-center form-group">
+                <div style="width: 100% !important;" class=" text-center form-group">
                       {{ form.submit(class="btn btn-info") }}
                 </div>             
               </form>
