--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,8 @@
   <script src="../static/js/bootstrap.min.js"></script>
   <script src="../static/js/jquery.dataTables.min.js"></script>
   <script src="../static/js/dataTables.bootstrap4.min.js"></script>
+  <link href='//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css' rel='stylesheet'/>
+  <script type="text/javascript" src="https://use.fontawesome.com/ff7a1609d3.js"></script>
 
 </head>
 <body>
@@ -128,11 +130,11 @@
         <div class="small row text-white mt-4" style="padding: 30px;">
             <div class="col-md-3">
                 <h4>IMPORTANT LINKS</h4>
-                <ul class="list-group">
-                    <li class="list-group-item list-group-item-dark"><a style="text-decoration: none; color: #fff;" href="/home">Home</a></li>
-                    <li class="list-group-item list-group-item-dark"><a style="text-decoration: none; color: #fff;" href="/login">Login</a></li>
-                    <li class="list-group-item list-group-item-dark"><a style="text-decoration: none; color: #fff;" href="/register">Register</a></li>
-                    <li class="list-group-item list-group-item-dark"><a style="text-decoration: none; color: #fff;" href="/forum">Forum</a></li>
+                <ul class="list-group footer-s m-1">
+                    <li><a style="text-decoration: none; color: #fff;" href="/home">Home</a></li>
+                    <li><a style="text-decoration: none; color: #fff;" href="/login">Login</a></li>
+                    <li><a style="text-decoration: none; color: #fff;" href="/register">Register</a></li>
+                    <li><a style="text-decoration: none; color: #fff;" href="/forum">Forum</a></li>
                 </ul>
                 <br>
             </div>
@@ -149,10 +151,10 @@
             <div class="col-md-3">
                 <h4>SOCIAL MEDIA</h4>
                 <ul class="list-group footer-s">
-                    <li ><a style="text-decoration: none; color: #fff;" href="https://facebook.com">Facebook</a></li>
-                    <li><a style="text-decoration: none; color: #fff;" href="https://linkedin.com">LinkedIn</a></li>
-                    <li><a style="text-decoration: none; color: #fff;" href="https://twitter.com">Twitter</a></li>
-                    <li><a style="text-decoration: none; color: #fff;" href="https://instagram.com">Instagram</a></li>
+                    <li ><i class="fa fa-facebook-square" aria-hidden="true"></i><a class="ml-1" style="text-decoration: none; color: #fff;" href="https://facebook.com">Facebook</a></li>
+                    <li><i class="fa fa-linkedin-square" aria-hidden="true"></i><a class="ml-1" style="text-decoration: none; color: #fff;" href="https://linkedin.com">LinkedIn</a></li>
+                    <li><i class="fa fa-twitter-square" aria-hidden="true"></i><a class="ml-1" style="text-decoration: none; color: #fff;" href="https://twitter.com">Twitter</a></li>
+                    <li><i class="fa fa-instagram" aria-hidden="true"></i><a class="ml-1" style="text-decoration: none; color: #fff;" href="https://instagram.com">Instagram</a></li>
                 </ul>
                 <br>
             </div>
@@ -162,10 +164,8 @@
                 Enter your Email Address in the form below to subscribe to our newsletter and get latest updates straight to your Email</p>
                 <form>
                     <div class="form-group">
-                        <div class="form-control">
-                            <input type="text" placeholder="Enter Email" class="form-control-md">
+                            <input type="text" placeholder="Enter Email" class="form-control">
 
-                        </div>
                     </div>
                 </form>
                 <button style="width: 100%;" class="btn btn-info" ><a style="text-decoration: none; color: #fff;" href="#">Subscribe </a></button>
