--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,7 @@
 ﻿* {
     margin: 0px;
     padding: 0;
-    font-family: tahoma, sans-serif;
+    font-family: 'Lato' !important, sans-serif;
 }
 
 ul.footer-s {
